# Air-ground-integrated-intelligent-rescue-robot

./: .gitignore  README.md  bashrc  frames_2025-06-04_17.57.43.gv
src/mlx90640_ros2/: CMakeLists.txt  package.xml
src/mlx90640_ros2/include/mlx90640_ros2/: MLX90640_API.h  MLX90640_I2C_Driver.h
src/mlx90640_ros2/src/: MLX90640_API.cpp  MLX90640_LINUX_I2C_Driver.cpp  mlx90640_node.cpp
src/my_project_controller/: CMakeLists.txt  package.xml
src/my_project_controller/src/: controller_node.cpp  depth_distance_node.cpp
src/person_detector/: package.xml  setup.py
src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
src/turn_on_wheeltec_robot/include/turn_on_wheeltec_robot/: wheeltec_robot.h
src/wukechuang_omni_avoidance/: CMakeLists.txt  package.xml
src/wukechuang_omni_avoidance/config/: params.yaml
src/wukechuang_omni_avoidance/include/wukechuang_omni_avoidance/: omni_avoidance.hpp
src/wukechuang_omni_avoidance/launch/: avoidance.launch.py
src/wukechuang_omni_avoidance/src/: omni_avoidance_node.cpp
src/ydlidar_ros2_driver/params/: ydlidar.yaml
src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
src/yolov5_rockchip/: package.xml  setup.cfg  setup.py
src/yolov5_rockchip/yolov5_rockchip/: yolov5_node.py
