<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turn_on_wheeltec_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elf@todo.todo">elf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
	
  <member_of_group>rosidl_interface_packages</member_of_group>  
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>serial</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>wheeltec_robot_msg</depend>
  <depend>serial_driver</depend>  # 替换为 serial_driver

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
